[package]
name = "code-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
fastrand = "2.3.0"
libc = "0.2.174"
wait4 = "0.1.3"
tonic = "*"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-prost = "0.14.0"

[build-dependencies]
tonic-prost-build = "*"
